@@ -1,3 +1,4 @@
+  Set client logfile group
 20140131 v1.7.0
   Allow setting group on client.cfg
 20140113 v1.6.0
